--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -4,6 +4,11 @@
     padding: 15px;
 }
 
+.dialogList {
+    border-right: 1px solid white;
+    margin-right: 20px;
+}
+
 .dialog a {
     color: black;
     text-decoration: none;
@@ -11,4 +16,8 @@
 
 .dialog a.active {
     color: gold;
+}
+
+.new_message {
+    margin-top: 40px;
 }
